--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div id="slideIndicator" class="slide-indicator">1 / 17</div>
 
         <!-- Slide 1: Título -->
-        <section id="slide-1" class="slide active gradient-bg">
+        <section id="slide-1" class="slide active gradient-bg text-center">
             <div class="slide-content">
                 <div class="logos-container animated-item">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Logo_petrobras.gif" alt="Logo Petrobras">
@@ -128,9 +128,6 @@
                         <p class="text-sm text-gray-600 mt-1">Ser exemplo de postura e conduta.</p>
                     </div>
                 </div>
-                <div class="animated-item delay-7 mt-6 p-4 bg-gray-100 rounded-lg border border-gray-200">
-                    <p class="text-gray-700 font-semibold">"90% das demissões comportamentais ocorrem por falta de IE."</p>
-                </div>
             </div>
         </div>
 
@@ -168,7 +165,7 @@
                     <div class="animated-item delay-1 bg-red-50 p-6 rounded-xl border-t-8 border-red-500 shadow-lg">
                         <h3 class="text-2xl font-bold text-red-800 mb-4">🔥 Modo Reativo (Instinto)</h3>
                         <p class="text-gray-700 mb-4">
-                            Acionado quando nos sentimos ameaçados (física ou emocionalmente).<br>O cérebro "desliga" o raciocínio para agir rápido.
+                            Acionado quando nos sentimos ameaçados<br> (física ou emocionalmente).<br>O cérebro "desliga" o raciocínio para agir rápido.
                         </p>
                         <ul class="space-y-2 text-red-900 font-medium list-inside">
                             <li>⚡ Ação imediata e impulsiva.</li>
@@ -176,7 +173,7 @@
                             <li>⚠️ Alto risco de erro ou conflito.</li>
                         </ul>
                         <div class="mt-4 text-sm text-gray-500 italic">
-                            "Útil para fugir de um incêndio, perigoso para lidar com uma crítica."
+                            "Útil para fugir de um incêndio,<br>perigoso para lidar com uma crítica."
                         </div>
                     </div>
 
@@ -184,7 +181,7 @@
                     <div class="animated-item delay-2 bg-blue-50 p-6 rounded-xl border-t-8 border-blue-500 shadow-lg">
                         <h3 class="text-2xl font-bold text-blue-800 mb-4">🧠 Modo Consciente (Razão)</h3>
                         <p class="text-gray-700 mb-4">
-                            Quando conseguimos fazer uma <strong>pausa</strong> entre o estímulo e a resposta.<br>O raciocínio retoma o controle.
+                            Quando conseguimos fazer uma<br><strong>pausa</strong> entre o estímulo e a resposta.<br>O raciocínio retoma o controle.
                         </p>
                         <ul class="space-y-2 text-blue-900 font-medium list-inside">
                             <li>🛑 Pausa para análise.</li>
@@ -313,7 +310,7 @@
                     </div>
                     <div class="animated-item delay-3 bg-cyan-50 p-6 rounded-xl border border-cyan-100">
                         <h3 class="font-bold text-lg text-cyan-800 mb-2">👂 Escuta Ativa:</h3>
-                        <p class="text-gray-700">Não ouça apenas para responder. Ouça para entender.</p>
+                        <p class="text-gray-700">Não ouça apenas para responder.<br>Ouça para entender.</p>
                         <p class="text-gray-700 mt-2">Observe a linguagem corporal e o tom de voz. 90% da comunicação não é verbal.</p>
                     </div>
                 </div>
@@ -384,15 +381,15 @@
                         <ul class="space-y-4 text-gray-600 text-sm">
                             <li class="mb-2">
                                 <span class="text-red-500 text-lg">➤</span> <strong>Combate à Complacência:</strong><br>
-                                A IE mantém o estado de alerta,<br>evitando o "piloto automático"<br>causado pelo tédio ou rotina.
+                                Manter o estado de alerta constante,<br>evitando o "piloto automático"<br>em tarefas rotineiras.
                             </li>
                             <li class="mb-2">
                                 <span class="text-red-500 text-lg">➤</span> <strong>Percepção de Risco:</strong><br>
-                                O estresse causa "visão de túnel".<br>O autocontrole amplia a<br>visão periférica dos riscos.
+                                Ampliar a visão periférica<br>para identificar perigos<br>antes que se tornem incidentes.
                             </li>
                             <li class="mb-2">
                                 <span class="text-red-500 text-lg">➤</span> <strong>Disciplina Operacional:</strong><br>
-                                Seguir procedimentos exige<br>foco mental e estabilidade emocional.
+                                O foco mental é a base<br>para seguir procedimentos<br>com rigor e precisão.
                             </li>
                         </ul>
                     </div>
@@ -403,16 +400,16 @@
                         <h3 class="text-xl font-bold text-gray-800 mb-4">Eficiência Operacional</h3>
                         <ul class="space-y-4 text-gray-600 text-sm">
                             <li class="mb-2">
-                                <span class="text-yellow-500 text-lg">➤</span> <strong>Comunicação Clara:</strong><br>
-                                Elimina ruídos e interpretações<br>erradas em passagens de turno e PTs.
+                                <span class="text-yellow-500 text-lg">➤</span> <strong>Comunicação Assertiva:</strong><br>
+                                Garantir que a informação<br>chegue clara e sem ruídos<br>nas passagens de turno.
                             </li>
                             <li class="mb-2">
-                                <span class="text-yellow-500 text-lg">➤</span> <strong>Gestão de Crise:</strong><br>
-                                Em paradas ou emergências,<br>a calma é o principal ativo<br>para tomada de decisão rápida.
+                                <span class="text-yellow-500 text-lg">➤</span> <strong>Tomada de Decisão:</strong><br>
+                                Manter a racionalidade<br>para agir com precisão<br>mesmo sob forte pressão.
                             </li>
                             <li class="mb-2">
-                                <span class="text-yellow-500 text-lg">➤</span> <strong>Resiliência:</strong><br>
-                                Capacidade de recuperar o foco<br>rapidamente após falhas ou imprevistos.
+                                <span class="text-yellow-500 text-lg">➤</span> <strong>Continuidade:</strong><br>
+                                Recuperar o ritmo rapidamente<br>após imprevistos,<br>focando na solução.
                             </li>
                         </ul>
                     </div>
@@ -423,16 +420,16 @@
                         <h3 class="text-xl font-bold text-gray-800 mb-4">Clima & Liderança</h3>
                         <ul class="space-y-4 text-gray-600 text-sm">
                             <li class="mb-2">
-                                <span class="text-blue-500 text-lg">➤</span> <strong>Segurança Psicológica:</strong><br>
-                                Criar um ambiente onde a equipe<br>não tem medo de reportar<br>erros ou quase-acidentes.
+                                <span class="text-blue-500 text-lg">➤</span> <strong>Confiança Mútua:</strong><br>
+                                Criar um ambiente onde<br>todos se sentem seguros<br>para reportar desvios.
                             </li>
                             <li class="mb-2">
-                                <span class="text-blue-500 text-lg">➤</span> <strong>Gestão de Conflitos:</strong><br>
-                                Resolver divergências entre áreas<br>(Op/Manut) com foco técnico,<br>não pessoal.
+                                <span class="text-blue-500 text-lg">➤</span> <strong>Trabalho em Equipe:</strong><br>
+                                Unir Operação e Manutenção<br>com foco no objetivo comum,<br>superando divergências.
                             </li>
                             <li class="mb-2">
-                                <span class="text-blue-500 text-lg">➤</span> <strong>Influência:</strong><br>
-                                Liderar pelo exemplo de postura,<br>gerando respeito e confiança.
+                                <span class="text-blue-500 text-lg">➤</span> <strong>Postura Profissional:</strong><br>
+                                Liderar pelo exemplo,<br>inspirando respeito<br>através da conduta.
                             </li>
                         </ul>
                     </div>
@@ -440,7 +437,7 @@
                 
                 <div class="animated-item delay-4 mt-8 p-4 bg-gray-100 rounded-lg border border-gray-300">
                     <p class="text-lg text-gray-800 font-semibold">
-                        "A estabilidade emocional da equipe é tão crítica para a operação quanto a estabilidade do processo."
+                        "A estabilidade da equipe é tão crítica para a operação quanto a estabilidade do processo."
                     </p>
                 </div>
             </div>
