--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
         <!-- Slide 12: Liderança e Clima -->
         <div id="slide-12" class="slide w-full h-full subtle-bg text-center">
             <div class="m-auto w-full max-w-4xl">
-                <h2 class="animated-item text-3xl md:text-4xl font-bold text-gray-800 mb-8">Impacto na Liderança e Clima</h2>
+                <h2 class="animated-item text-3xl md:text-4xl font-bold text-gray-800 mb-8">Impacto no Clima</h2>
                 <div class="grid md:grid-cols-2 gap-8">
                     <div class="animated-item delay-1 p-6 bg-white rounded-xl shadow-lg border-t-4 border-red-500">
                         <h3 class="text-xl font-bold text-red-700 mb-4">Liderança Dissonante</h3>
