Update final - Inteligencia emocional

--- a/index.html
+++ b/index.html
@@ -481,19 +481,19 @@
                 <div class="grid md:grid-cols-2 gap-6 text-center">
                     <div class="animated-item delay-1 p-4 border border-green-200 rounded-lg bg-green-50">
                         <h3 class="font-bold text-green-700 mb-2">🟩 CALMO</h3>
-                        <p class="text-sm">Você demonstra domínio. <strong>Foco:</strong> Automotivação e estabilidade.</p>
+                        <p class="text-sm">Você demonstra domínio. <strong><br>Foco:</strong> Automotivação e estabilidade.</p>
                     </div>
                     <div class="animated-item delay-2 p-4 border border-blue-200 rounded-lg bg-blue-50">
                         <h3 class="font-bold text-blue-700 mb-2">🟦 NEUTRO</h3>
-                        <p class="text-sm">Racional, mas cuidado com a supressão. <strong>Foco:</strong> Empatia e habilidades sociais.</p>
+                        <p class="text-sm">Racional, mas cuidado com a supressão. <strong><br>Foco:</strong> Empatia e habilidades sociais.</p>
                     </div>
                     <div class="animated-item delay-3 p-4 border border-orange-200 rounded-lg bg-orange-50">
                         <h3 class="font-bold text-orange-700 mb-2">🟧 IRRITADO</h3>
-                        <p class="text-sm">Reage emocionalmente ao incômodo. <strong>Foco:</strong> Autoconsciência (gatilhos).</p>
+                        <p class="text-sm">Reage emocionalmente ao incômodo. <strong><br>Foco:</strong> Autoconsciência (gatilhos).</p>
                     </div>
                     <div class="animated-item delay-4 p-4 border border-red-200 rounded-lg bg-red-50">
                         <h3 class="font-bold text-red-700 mb-2">🟥 FURIOSO</h3>
-                        <p class="text-sm">Emoções intensas e impulsividade. <strong>Foco:</strong> Autocontrole (respirar, pensar).</p>
+                        <p class="text-sm">Emoções intensas e impulsividade. <strong><br>Foco:</strong> Autocontrole (respirar, pensar).</p>
                     </div>
                 </div>
             </div>
