--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </button>
 
         <!-- Indicador de Slide -->
-        <div id="slideIndicator" class="slide-indicator">1 / 17</div>
+        <div id="slideIndicator" class="slide-indicator">1 / 18</div>
 
         <!-- Slide 1: Título -->
         <section id="slide-1" class="slide active gradient-bg text-center">
@@ -515,8 +515,22 @@
             </div>
         </div>
 
-        <!-- Slide 17: Créditos -->
-        <div id="slide-17" class="slide w-full h-full low-opacity-gradient-bg">
+        <!-- Slide 17: Referências -->
+        <div id="slide-17" class="slide w-full h-full text-center">
+            <div class="m-auto w-full max-w-4xl">
+                <h2 class="animated-item text-3xl md:text-4xl font-bold text-gray-800 mb-12">Referências e Agradecimentos</h2>
+                
+                <div class="animated-item delay-1 p-8 bg-white rounded-xl shadow-lg border-l-8 border-emerald-500 text-left">
+                    <p class="text-lg text-gray-600 mb-4 italic">Agradecimento especial pela consultoria técnica e revisão de conteúdo:</p>
+                    <p class="text-xl text-gray-800 font-serif leading-relaxed">
+                        FARIA, Luiza Medeiros Alves de. <strong>Inteligência Emocional e Comportamento Organizacional</strong>. 2025. Consultoria Técnica. Graduanda em Recursos Humanos – Universidade do Estado de Minas Gerais (UEMG), Faculdade de Políticas Públicas e Gestão de Negócios (FaPPGeN).
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Slide 18: Créditos -->
+        <div id="slide-18" class="slide w-full h-full low-opacity-gradient-bg">
             <div class="m-auto flex flex-col items-center text-gray-800">
                 <div class="animated-item mb-6 flex items-center justify-center space-x-8">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Logo_petrobras.gif" alt="Logo Petrobras" class="h-20">
